--- a/_posts/2016-11-21-cat-life.md
+++ b/_posts/2016-11-21-cat-life.md
@@ -6,7 +6,7 @@ categories: blog
 excerpt:
 tags: []
 image:
-  feature:
+  path:
 date: 2016-11-21T14:45:05-05:00
 modified: 2017-12-9T17:37:00-05:00
 comments: true
